# allocation-gym

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
allocation_gym/: __init__.py  btc_correlation_report.py  btc_midcap_correlation.py  cli.py  enums.py  evaluators.py  gold_btc_analysis.py  optimal_bands.py  plotting.py  runner.py
allocation_gym/analyzers/: performance.py
allocation_gym/blobs/: __init__.py  client.py  index.py  indexes.py  models.py
allocation_gym/data/: __init__.py  loaders.py
allocation_gym/indicators/: __init__.py
allocation_gym/options/: README.md  __init__.py  backtest_forward.py  historical_pricing.py  iwm_vol_compare.py  iwn_correlation.py  iwn_put_spread_backtest.py  iwn_vol_compare.py  plot_drawdown.py  report.py
allocation_gym/simulation/: data.py  plotting.py  runner.py
allocation_gym/strategies/: __init__.py  mean_reversion.py  momentum.py  momentum_dca.py  variance_kelly.py
audit/: __main__.py  checks.py  reader.py  test_audit.py
crane_gym/: __init__.py  cli.py
crane_gym/blobs/: __init__.py  client.py
docs/: AUCTION_SIGNALS.md  btc_correlation_all_assets.csv  btc_correlation_metadata.csv  btc_top10_long_thesis.csv  btc_top10_short_thesis.csv
docs/11/: relevance_math.tex
docs/7/: report_data.json  (+4 more)
scripts/: backtest_optimal_bands.py  build_workflow_service.sh  check_iwn_iv.py  confounding_analysis.py  generate_vol_report.py  generate_ytd_report.py  iwn_iv_vs_realized.py
tests/: conftest.py  test_audit.py  test_blob_index.py  test_monte_carlo.py  test_optimal_bands.py  test_strategies.py  test_variance_metrics.py
(+9 files in other folders)
