[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allocation-gym"
version = "0.1.0"
description = "Variance-Kelly backtesting framework built on Backtrader"
requires-python = ">=3.10"
dependencies = [
    "backtrader>=1.9.78",
    "numpy>=1.24",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.0", "alpaca-py>=0.21.0"]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[project.scripts]
allocation-gym = "allocation_gym.runner:main"
allocation-gym-sim = "allocation_gym.simulation.runner:main"
btc-dashboard = "allocation_gym.signals.btc_dashboard:main"
